Deployment/portcheck-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: portcheck
  labels:
    app: portcheck
spec:
  selector:
    matchLabels:
      app: portcheck
  template:
    metadata:
      labels:
        app: portcheck
    spec:
      containers:
      - name: portcheck
        image: quay.io/two.oes/portcheck:latest
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
