Deployment/spearedge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spearedge
  labels:
    app: spearedge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spearedge
  template:
    metadata:
      labels:
        app: spearedge
    spec:
      containers:
      - name: spearedge
        image: registry.gitlab.com/two.oes/portcheck/spearedge:latest
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
      serviceAccountName: spearedge
