Deployment/spearedge-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spearedge
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: spearedge
    weight: 100
  wildcardPolicy: None
